Add PHP containers

--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -2,7 +2,10 @@ FROM alpine:3.11.6
 
 RUN apk update && apk upgrade && \
     apk add lighttpd && \
-    echo "Hello, World" > /var/www/localhost/htdocs/index.html
+    mkdir -p /var/www/html && echo "Hello, World" > /var/www/html/index.html && \ 
+    mkdir -p /var/cache/lighttpd/compress/
+
+COPY ./lighttpd.conf /etc/lighttpd/lighttpd.conf
 
 CMD lighttpd -D -f /etc/lighttpd/lighttpd.conf
 
