--- a/alpine/lighttpd.conf
+++ b/alpine/lighttpd.conf
@@ -29,7 +29,7 @@ server.modules = (
 #    "mod_simple_vhost",
 #    "mod_evhost",
 #    "mod_userdir",
-#    "mod_compress",
+    "mod_compress",
 #    "mod_ssi",
 #    "mod_usertrack",
 #    "mod_expire",
@@ -104,15 +104,15 @@ server.follow-symlink = "enable"
 # (might need to explicitly set "url-path-2f-decode" = "disable"
 #  if a specific application is encoding URLs inside url-path)
 server.http-parseopts = (
-  "header-strict"           => "enable",# default
-  "host-strict"             => "enable",# default
-  "host-normalize"          => "enable",# default
-  "url-normalize-unreserved"=> "enable",# recommended highly
-  "url-normalize-required"  => "enable",# recommended
-  "url-ctrls-reject"        => "enable",# recommended
-  "url-path-2f-decode"      => "enable",# recommended highly (unless breaks app)
+  "header-strict"           => "enable",
+  "host-strict"             => "enable",
+  "host-normalize"          => "enable",
+  "url-normalize-unreserved"=> "enable",
+  "url-normalize-required"  => "enable",
+  "url-ctrls-reject"        => "enable",
+  "url-path-2f-decode"      => "disable",
  #"url-path-2f-reject"      => "enable",
-  "url-path-dotseg-remove"  => "enable",# recommended highly (unless breaks app)
+  "url-path-dotseg-remove"  => "disable",
  #"url-path-dotseg-reject"  => "enable",
  #"url-query-20-plus"       => "enable",# consistency in query string
 )
@@ -340,9 +340,5 @@ compress.filetype           = ( "application/javascript", "text/css", "text/html
 # debug.log-file-not-found   = "enable"
 # }}}
 
-server.modules += (
-    "mod_compress",
-    "mod_staticfile",
-)
 
 # vim: set ft=conf foldmethod=marker et :
